# content-transformer

./: .dockerignore  .env.production  .gitignore  .mcp.json  BEFORE_AFTER_VISUAL_GUIDE.md  BUILD_STATUS.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.old  FIXES_AND_SOLUTIONS.md  FIXES_APPLIED.md  FIXES_STATUS.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  PLAYWRIGHT_OPTIONAL_SUMMARY.md  QUICK_START.bat  REACT_APP_BUILD_COMPLETE.md  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_SUMMARY.md  START_ALL.bat  START_APP.bat  START_BACKEND.bat  START_FRONTEND.bat  START_FULLSTACK.bat  STOP_ALL.bat  STOP_APP.bat  STOP_SERVICES.bat  STREAMLIT_CLOUD_DEPLOYMENT.md  SWIFTOR_DEPLOYMENT_READY.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TEST_APP.bat  TEST_RESULTS_JAN_2026.md  TEST_TRANSLATION.bat  (+14 more)
.claude/: branches.json  git-workflow.md
.streamlit/: secrets.toml.example
backend/: .env.example  BACKEND_PROGRESS.md  Dockerfile  Dockerfile.prod  README.md  SESSION_COMPLETE.md  SWAGGER_TESTING_GUIDE.md  TESTING_GUIDE.md  TEST_RESULTS.md  add_tokens_to_user.py  alembic.ini  create_admin.py  create_test_user.py  debug_register.py  enable_sites_for_user.py  requirements.txt  start_server.bat  test_all_endpoints.py  test_app.py  test_article_content.py  test_auth_flow.py  test_openai_direct.py  test_phase2.py  test_scraper.py
config/: settings.py  sites_config.json  word_corrections.json
core/: ai_providers.py  enhancer.py  keyword_search.py  prompts.py  review_agent.py  scheduler.py  scraper.py  (+1 more)
(+272 files in other folders)
