[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-news-shared"
version = "1.0.0"
description = "Shared modules for Travel News Translator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.12.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.0.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
